gcc/testsuite/rust/rustc/ui/parser/mismatched-delimiter-corner-case-issue-127868.rs
// issue: rust-lang/rust#127868

fn main() {
    let a = [[[[[[[[[[[[[[[[[[[[1, {, (, [,;
} // { dg-error "" "" { target *-*-* } }
// { dg-error "" "" { target *-*-* } }

